--- a/src/components/UI/ButtonOutline/ButtonOutline.css
+++ b/src/components/UI/ButtonOutline/ButtonOutline.css
@@ -8,9 +8,14 @@
 	font-size: 2rem;
 	border: 1px solid var(--primary-color);
 	transition: all 0.2s;
+	cursor: pointer;
 }
 
-.ButtonOutline:hover {
+.ButtonOutline:hover,
+.ButtonOutline:active,
+.ButtonOutline:visited,
+.ButtonOutline:focus {
 	background-color: var(--primary-color);
 	color: #fff;
+	outline: none;
 }
