--- a/src/components/AddPost/TagsButton/TagsButton.css
+++ b/src/components/AddPost/TagsButton/TagsButton.css
@@ -1,28 +1,31 @@
-.Button  {
-    padding: 0.5rem 1rem;
-    outline: none;
-    border: none;
-    background-color: var(--dark-grey);
-    border-radius: 4px;
-    color: #fff;
-    transition: all 0.2s;
-    font-size: 1.2rem;
+/** @format */
+
+.Button {
+	padding: 1rem;
+	outline: none;
+	border: none;
+	background-color: var(--dark-grey);
+	border-radius: 4px;
+	color: #fff;
+	transition: all 0.2s;
+	font-size: 1.2rem;
+	cursor: pointer;
 }
 
 .Button:hover {
-    background-color: var(--primary);
+	background-color: var(--primary-color);
 }
 
 .Active {
-    padding: 0.5rem 1rem;
-    outline: none;
-    border: none;
-    background-color: var(--primary);
-    border-radius: 4px;
-    color: #fff;
-    transition: all 0.2s;
+	padding: 0.5rem 1rem;
+	outline: none;
+	border: none;
+	background-color: var(--primary-color);
+	border-radius: 4px;
+	color: #fff;
+	transition: all 0.2s;
 }
 
 .Active:hover {
-    background-color: var(--dark-grey);
+	background-color: var(--dark-grey);
 }
