--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,15 +1,16 @@
 /** @format */
 
 .Nav {
-	padding: 1rem 2rem;
+	padding: 1rem 2rem 1rem 0;
 	grid-column: 1/3;
 	display: flex;
 	flex-direction: column;
 	grid-template-rows: repeat(3, min-content);
 	grid-row-gap: 2rem;
 	justify-items: start;
-	position: fixed;
-	height: 90vh;
+	height: 85vh;
+	position: sticky;
+	top: 5%;
 }
 
 .ImgContainer {
