--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -1,8 +1,11 @@
 /** @format */
 
 .SideBarContainer {
-	grid-column: 8/10;
+	grid-column: 8/-1;
 	display: grid;
 	grid-template-rows: repeat(3, max-content);
 	grid-row-gap: 1.5rem;
+	height: 30%;
+	position: sticky;
+	top: 5%;
 }
