--- a/src/components/TagsContainer/Link/Link.css
+++ b/src/components/TagsContainer/Link/Link.css
@@ -6,15 +6,15 @@
 	border-radius: 5px;
 	transition: all 0.2s;
 	cursor: pointer;
+	font-size: 1.6rem;
+	margin-right: 0.5rem;
 }
 
 .TagContianer a {
 	text-decoration: none;
 	color: rgb(43, 43, 43);
 	transition: all 0.2s;
-	padding-top: 0.2rem;
 	margin-left: 1rem;
-	margin-top: -0.2rem;
 	transition: all 0.2s;
 }
 
