--- a/src/components/TagsContainer/TagsContainer.css
+++ b/src/components/TagsContainer/TagsContainer.css
@@ -1,12 +1,9 @@
 /** @format */
 
 .TagsContianer {
-	position: absolute;
-	top: 10%;
-	left: 100%;
-	display: grid;
+	display: flex;
 	grid-row-gap: 0.5rem;
-	background-color: var(--vlight-grey);
+	background-color: var(--bg);
 	border-radius: 5px;
 	padding: 1rem;
 }
