--- a/src/components/UI/FollowSugg/FollowSugg.css
+++ b/src/components/UI/FollowSugg/FollowSugg.css
@@ -4,6 +4,7 @@
 	grid-row-gap: 0.5rem;
 	background-color: var(--bg);
 	border-radius: 5px;
+	padding-bottom: 1rem;
 }
 
 .Header {
@@ -60,9 +61,8 @@
 
 .FollowDetails button {
 	width: 30%;
-	height: 10%;
-	padding: 0.5rem;
-	font-size: 1.4rem;
+	padding: 1rem;
+	font-size: 1.6rem;
 	margin-left: auto;
 	cursor: pointer;
 }
