--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -1,11 +1,19 @@
+/** @format */
+
 .Input {
-  outline: none;
-  border-radius: 3px;
-  border: none;
-  padding: 1rem;
-  color: rgb(90, 90, 90);
+	outline: none;
+	border-radius: 3px;
+	border: none;
+	padding: 2rem;
+	color: rgb(90, 90, 90);
+	font-size: 2rem;
 }
 
 .Input::placeholder {
-  color: rgb(143, 143, 143);
+	color: rgb(143, 143, 143);
+}
+
+.Invalid {
+	border-bottom: 3px solid #ff6e6e;
+	background-color: rgb(226, 154, 146);
 }
