--- a/src/containers/Login/Login.css
+++ b/src/containers/Login/Login.css
@@ -1,50 +1,62 @@
-.Content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: grid;
-  justify-items: center;
-  align-items: center;
-  grid-row-gap: 3rem;
+/** @format */
 
-  background-color: rgba(245, 245, 245, 0.85);
-  padding: 5rem;
-  border-radius: 5px;
-  width: 40vw;
+.Content {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	display: grid;
+	justify-items: center;
+	align-items: center;
+	grid-row-gap: 3rem;
+
+	background-color: rgba(245, 245, 245, 0.85);
+	padding: 5rem;
+	border-radius: 5px;
+	width: 40vw;
 }
 
 .ImgContainer {
-  height: 5rem;
-  width: 5rem;
-  cursor: pointer;
+	height: 5rem;
+	width: 5rem;
+	cursor: pointer;
 }
 
 .Img {
-  height: 100%;
-  width: 100%;
+	height: 100%;
+	width: 100%;
 }
 
 .TextPrimary {
-  font-size: 4rem;
-  font-weight: 700;
+	font-size: 4rem;
+	font-weight: 700;
 }
 
 .Form {
-  display: grid;
-  grid-row-gap: 2rem;
-  justify-self: stretch;
+	display: grid;
+	grid-row-gap: 2rem;
+	justify-self: stretch;
 }
 
 .ButtonContainer {
-  justify-self: stretch;
-  display: grid;
+	justify-self: stretch;
+	display: grid;
 }
 
 .LinkContainer {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-column-gap: 1rem;
-  font-size: 1.5rem;
-  font-weight: 300;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-column-gap: 1rem;
+	font-size: 1.5rem;
+	font-weight: 300;
+}
+
+.LinkContainer a {
+	text-decoration: none;
+	color: var(--primary-color);
+	transition: all 0.2s;
+}
+
+.LinkContainer a:hover {
+	color: var(--primary-color-dark);
 }
