--- a/src/containers/Pages/Profile/Profile.css
+++ b/src/containers/Pages/Profile/Profile.css
@@ -92,3 +92,42 @@
 .containerClass:hover {
 	background: transparent;
 }
+
+/** @format */
+
+/* .Container {
+	background-color: rgba(41, 41, 41, 0.438);
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	z-index: 1000;
+} */
+.PopupContainer {
+	margin: 0 auto;
+	text-align: center;
+	min-width: 20rem;
+	padding: 1rem;
+	border-radius: 10px;
+	background-color: #fff;
+	border: 2px solid var(--primary-color);
+	color: var(--dark-grey);
+	position: fixed;
+	top: 5%;
+	left: 45%;
+	cursor: pointer;
+	transition: all 0.2s;
+}
+
+.PopupContainer:hover {
+	background-color: var(--vlight-grey);
+}
+
+.PopupBtnsContainer {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-column-gap: 0.5rem;
+}
+
+.PopupBtnsContainer button {
+	font-size: 1.5rem;
+}
