--- a/src/containers/Posts/GPost/GPost.css
+++ b/src/containers/Posts/GPost/GPost.css
@@ -2,7 +2,7 @@
 
 .Container {
 	display: grid;
-	grid-row-gap: 0.5rem;
+	grid-row-gap: 1rem;
 	padding: 1.5rem;
 	border-radius: 5px;
 	background-color: var(--bg);
@@ -60,7 +60,6 @@
 	font-size: 1.2rem;
 	font-weight: 300;
 	margin-left: 0.5rem;
-	margin-top: 0.5rem;
 	text-align: center;
 }
 
@@ -98,17 +97,13 @@
 	color: var(--dark-grey);
 }
 
-/* .More {
-    position: absolute;
-    margin-top: -100%;
-} */
-
 .DataText:hover {
 	color: var(--primary-color);
 }
 
 .Text {
 	font-size: 1.7rem;
+	margin-bottom: 0.5rem;
 }
 
 .Fourth {
@@ -127,8 +122,8 @@
 	transition: all 0.2s;
 	color: var(--dark-grey);
 }
-
 .Third {
+	height: 100%;
 }
 
 .Media {
@@ -137,7 +132,7 @@
 }
 
 .ImgContentContainer {
-	height: 60%;
+	height: 100%;
 	width: 100%;
 	border-radius: 5px;
 	overflow: hidden;
@@ -159,8 +154,8 @@
 }
 
 .Video {
-	width: 100%;
 	height: 100%;
+	width: 100%;
 	overflow: hidden;
 	transition: all 0.2s;
 	border-radius: 5px;
