add infinite scroll, load user posts in their profile page, change url depend on user and dynamic routing, and other stuff

--- a/src/App.css
+++ b/src/App.css
@@ -57,15 +57,12 @@
 	line-gap-override: 2%;
 }
 
-* {
-	margin: 0;
-	padding: 0;
-}
-
 *,
 *::before,
 *::after {
 	box-sizing: inherit;
+	margin: 0;
+	padding: 0;
 }
 
 html {
@@ -78,4 +75,5 @@ body {
 	font-weight: 400;
 	font-size: 2rem;
 	line-height: 1.6;
+	padding: 1rem;
 }
