--- a/src/components/UI/FollowSugg/FollowSugg.css
+++ b/src/components/UI/FollowSugg/FollowSugg.css
@@ -27,15 +27,25 @@
 	align-items: center;
 }
 
-.Img {
+.ImgContainer {
+	display: 'flex';
+	align-items: center;
+	margin-right: 1rem;
+	border-radius: 9999px;
 	height: 5rem;
 	width: 5rem;
-	border-radius: 50%;
-	margin-right: 0.5rem;
+	overflow: hidden;
 	transition: all 0.2s;
+	cursor: pointer;
+	position: relative;
 }
 
-.Img:hover {
+.Img {
+	width: 100%;
+	height: auto;
+}
+
+.ImgContainer:hover {
 	filter: brightness(0.8);
 }
 
