add more tags, add collapse button for tag container, add follow functionality, add some other features

--- a/src/components/SingleTagPage/SingleTagPage.css
+++ b/src/components/SingleTagPage/SingleTagPage.css
@@ -6,7 +6,7 @@
 	display: grid;
 	grid-template-rows: max-content 1fr;
 	padding: 2rem 0;
-	margin: 2rem auto;
+	margin: 0 auto;
 	position: relative;
 	/* background-color: rgba(235, 235, 235, 0.39); */
 }
