--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -5,7 +5,7 @@
 	display: grid;
 	grid-template-rows: repeat(3, max-content);
 	grid-row-gap: 1.5rem;
-	height: 30%;
+	height: 90vh;
 	position: sticky;
 	top: 5%;
 }
