--- a/src/components/TagsContainer/TagsContainer.css
+++ b/src/components/TagsContainer/TagsContainer.css
@@ -1,8 +1,9 @@
 /** @format */
 
 .TagsContianer {
-	display: flex;
-	grid-row-gap: 0.5rem;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+	grid-gap: 0.5rem;
 	background-color: var(--bg);
 	border-radius: 5px;
 	padding: 1rem;
